name:                caesar-cracker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pakettiale/caesar-cracker#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksanteri Paakkinen
maintainer:          aleksanteri.paakkinen@gmail.com
copyright:           Aelksanteri Paakkinen 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable caesar-cracker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , caesar-cracker
  default-language:    Haskell2010

test-suite caesar-cracker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , caesar-cracker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pakettiale/caesar-cracker
